# darcs.net

./: GNUmakefile  HACKING  NEWS  README  Setup.lhs  darcs.cabal  hpc.README
_darcs/: hashed_inventory  tentative_pristine
_darcs/inventories/: 0000000739-20e7eaa10b72af6e0dc52bb00d0e58cc893d288e098377b5155ec3c9dbdb4aba  0000000776-c9e07b848db5b9fa23ecf465e5befb3fe950881fd8dbe0d2b8e70e110907afd1  0000001019-103b15b4bf211efbfef9efcdec5b53f4c8bbc258c4f150e837046050e9acda82  0000001130-7a21d17f370b385afac45fa0d6b8e517a8b0064d48dbe7d46093eecdcb39ac88  0000001144-defef3268214b4f5b39cfa1b59622aa5a0dc1715b21200ffd77615d00e3c487a  0000001196-425caaa241860e2c915cde3185fe9bb6d922f9620a9db9a4b91742a59aaf1f57  0000001357-257aa9badfd5fdeb65dd29d1b9cb4eab4848224d6cf294e1126eb178ee770df7  0000001453-314d4498748e0f99995f6be3169fae40e2fc8f463cc009077344a30136c876e1  0000001560-8b1bdea248cbca04e2f31e9ab4c8dfc00bb17a43e47e17089f2b7d266f17215b  0000002024-90e9804c82728d8f8fbf04eb7c23de18614af0d0ea9eba2ce6fd4f2aeae63599  0000002389-ed80e24364ee8bddf68e725704a63976dbb6fec8f8943079d53d7dce8304baa9  0000002796-8fba16809a9b39cea51e02a84defda47e454069ca22686a5c71f665257a78d79  0000003186-a4a02122608b7a2d32edb8b22230af406dc81319f8d3d4f78b81067fe04f6dbc  0000003718-c24677d9ec57479b833e5f263479f2a5826de3659590bcc8e006db7b09c81bbd  0000004009-488afbf9717d8403213d71806334473634f199478024b466605237b67022a353  0000004131-e26c360aafcc26cc137c80a61cfa798d3b1555aba72508b9730303127f3e1e97  0000004375-2707b3df1dead42547b156a89a01f72d882a420c1dc243864841c0ea8849f156  0000005033-6fdc85c8e21db5877ecfbd1d490e3b30ba3a01e9933356463b391501dc269957  0000005066-6b4860b4b8a80e11e5f7a132117451bdfb27def8f287f45b171d759e62ef8927  0000005604-bb001bedd0ab7044fd8e0386b2de3e79eefff69b9fe3776d035a9f2cedb354ad  0000006820-bb2596b5f3468c47ca8f116c9055ee396c7f47827781a82993d292fe5178c02f  0000006954-a759f17559177bbea86dfdd326204ca0f93231eaa8a23a174e30c882eb2d1475  0000007251-caf3e841079f62a380a7b164927274c6705fc934c3789b57e045b3feb22d50e6  0000007300-7b71d376cac8c022abd5219e25e936a1e11feb5848204fefae9691aeed2e1f23  0000007371-95a76f24aaddb30e36bd78989d488a6712a8b4fb853e8bdbaee1a10431f9fff4  0000009809-ade3c6b4fe238a47dea55d829952fd3f3d5e050f2624144677bbb51e5031a93e  0000012366-798f9c67fdb319fcb212e6d2fd57a710619c41807099d8d1711f34766a945f6a  0000012709-4b2e4dfae75daa4a7dd25dec84bde23d9a99618366a413e0e6db502dc5d8e2a8  0000014076-814bbc5032743d8977fa0380952ebfc76b9e20091a95633641badce8a9acfded  0000014342-e1dd4ecf515934c3d23cefcfbaa2ec1515b2995d9957832bb3f8f71713e75f52  0000016506-4f243906795b60d607ff7e333105a8fd19237912dfd42201fa2c5fdfe9e8a4e8  0000017959-45c7e773792480c81c4d328e2d6c8d345396589f0651ecb5a326a8325d30f269  0000019770-06c2f2ab128cbaec2374fee6326cb5d65aeab3cce4616146ce371457d9264b79  0000020505-a5a0ad80d61a379aa9d8cbe1c60b50feb94e0f1231c92421ad21ae9d8de1e83a  0000022345-73b2ac4b310d28f555617627d80ff7d5c19c1d0c54d43b77bc049cc8579d121f  0000023455-147a58188b0ad830189edb73bec2ea152d42711e7dcfc5f9773517b7e4fdfc4a  0000024092-c3d5ccb5258c52db28f663d927514637e3dc90a90dde144dd03a38503726acc4  0000024418-94b63f1145011e8e4a34d5cd3e88e1c8acb52795543a9cc2118a10c013a0f4b9  0000025962-f09fb239c8cdccc3ff34c3255db483b941050be03ff7dd1ba9c67d3bc0ef14d0  0000027573-e0f2228c8a5de974d32a408e8f0566c628d04922fa2f359896a00d1f66b5d669  (+24 more)
_darcs/patches/: 0000000064-f95a452bd280282a6c428fe1020374232fe229bb67d0e553ffdd6eb13bab645d  0000000080-df249fe3d7551102a8fcae98719c5b8574a22cebe90e730453559d93952ef629  0000000084-78dac20207c44f4fa669b7529a57c0daa0436d479cbdeeddd833db37c45e7dfe  0000000084-84aad132b143b804962f011532a9205d14406717e3f1657d7e81bdc899ec17a9  0000000084-fe6d1110dd2570df392c81e8790b071ab835187b865af95ad61fb7e8f38a2bf3  0000000086-f50e935f7595513b7a0b8b7f51da6d5964b91dab9dc53c3ba2d29f7b9688b04d  0000000089-a131a0b245fcc25b31660b13327b8e6b58c3e05dda7a64f91220ccb087d19da8  0000000094-e66fd3a8ae858ac2aeb9f586c6788f955b8a8e38bb2bc90d0bb88bfa35f6497f  0000000099-191b20c93966321a722f7d037ceb32276345902028c2b39ba1354e8036640776  0000000099-fa76661e509289bdc942b579e83760aab649df6dd456f52ff32e96b266fc45e3  0000000103-0a11e66c24661f714e8fa25b5ee129c2913a7aba1f606d2beeb8ef16edf1a9b8  0000000109-2ee88e2d60bf22dd1be2e95edc397bd884c03ff992ea4e0e0476ecce4fc692c8  (+9267 more)
_darcs/prefs/: prefs  repos  sources
bench/: README  many_conflicting_changes.sh
contrib/: buildbot-try.sh  cygwin-wrapper.bash  darcs-shell  darcs_completion  darcshoogle  darcshoogle.el  install-deps.sh  update_roundup.pl  upload.cgi
doc/: darcs.css  donations.html  index.html  thanks.html
release/: darcs.spec.in  license_exceptions  licensing  release.sh
src/: ByteStringUtils.hs  CommandLine.hs  DateMatcher.hs  DateTester.hs  English.hs  Exec.hs  HTTP.hs  IsoDate.hs  Lcs.hs  Preproc.hs  Printer.lhs  Progress.hs  Ratified.hs  SHA1.hs  Ssh.hs  URL.hs  Workaround.hs  best_practices.tex  building_darcs.tex  configuring_darcs.tex  darcs.hs  darcs.tex  features.tex  formats.tex  gadts.h  gpl.tex  microbench.hs  stringify.hs  test.hs  test_stub.hs
src/Crypt/: SHA256.hs
tests/: annotate.sh  ask_deps.sh  bad-format.sh  changes_with_move.sh  check.sh  conflict-doppleganger.sh  diff.sh  double-unrevert.sh  failing-add_permissions.sh  failing-issue1406.sh  failing-issue1473_annotate_repodir.sh  failing-issue1727_move_current_directory.sh  failing-issue1740-mv-dir.sh  failing-issue612_repo_not_writable.sh  failing-merging_newlines.sh  filepath.sh  get_tag.sh  harness.sh  hashed_inventory.sh  hunk-editor.sh  impossible_unrevert.sh  issue1110_get_hashed.sh  issue1110_get_old-fashioned.sh  issue1139-diff-last.sh  issue1139-diff-with-no-args.sh  issue1162_add_nonexistent_slash.sh  issue121.sh  issue1232_convert_forgets_prefs.sh  issue1248.sh  issue1290-diff-index.sh  issue1465_ortryrunning.sh  issue1584_optimize_upgrade.sh  issue1645-ignore-symlinks-case-fold.sh  issue1645-ignore-symlinks.sh  issue1739-escape-multibyte-chars-correctly.sh  issue1749-rmdir.sh  issue1763-pull-fails-on-non-ascii-filenames.sh  issue1845-record-removed.sh  issue1857-pristine-conversion.sh  issue1871-record-dot.sh  (+34 more)
(+168 files in other folders)
