Name:           darcs
version:        2.5
License:        GPL
License-file:   COPYING
Author:         David Roundy <droundy@darcs.net>, <darcs-users@darcs.net>
Maintainer:     <darcs-users@darcs.net>

Stability:      Experimental
Category:       Development
Synopsis:       a distributed, interactive, smart revision control system
Description:    Darcs is a free, open source revision control
                system. It is:
                .
                * Distributed: Every user has access to the full
                  command set, removing boundaries between server and
                  client or committer and non-committers.
                .
                * Interactive: Darcs is easy to learn and efficient to
                  use because it asks you questions in response to
                  simple commands, giving you choices in your work
                  flow. You can choose to record one change in a file,
                  while ignoring another. As you update from upstream,
                  you can review each patch name, even the full "diff"
                  for interesting patches.
                .
                * Smart: Originally developed by physicist David
                  Roundy, darcs is based on a unique algebra of
                  patches.
                .
                  This smartness lets you respond to changing demands
                  in ways that would otherwise not be possible. Learn
                  more about spontaneous branches with darcs.
Homepage:       http://darcs.net/

Build-Type:     Custom
Cabal-Version:  >= 1.8
Tested-with:    GHC==6.8.2

extra-source-files:
  -- C headers
  src/*.h src/Crypt/sha2.h
  src/win32/send_email.h src/win32/sys/mman.h

  -- The contrib directory would make a sensible 'darcs-contrib' package
  contrib/_darcs.zsh, contrib/darcs_completion,
  contrib/cygwin-wrapper.bash, contrib/update_roundup.pl, contrib/upload.cgi,
  contrib/darcs-errors.hlint,

  -- documentation files
  src/best_practices.tex, src/building_darcs.tex, src/configuring_darcs.tex,
  src/features.tex, src/formats.tex, src/gpl.tex, src/switching.tex, src/darcs.tex
  doc/darcs.css

  README, NEWS

  -- release data
  release/distributed-version, release/distributed-context

  -- testsuite
  Distribution/ShellHarness.hs
  tests/data/*.tgz tests/data/README
  tests/*.sh
  tests/bin/trackdown-bisect-helper.hs
  tests/bin/hspwd.hs
  tests/network/*.sh
  tests/lib
  tests/data/example_binary.png
  tests/README.test_maintainers.txt

  GNUmakefile

source-repository head
  type:     darcs
  location: http://darcs.net/

flag curl
  description: Use libcurl for HTTP support.

flag http
  description: Use the pure Haskell HTTP package for HTTP support.

flag static
  description: Build static binary
  default:     False

flag terminfo
  description: Use the terminfo package for enhanced console support.

flag threaded
  description: Use threading and SMP support.
  default:     True

flag library
  description: Build darcs library
  default:     True

flag color
  description: Use ansi color escapes.

flag mmap
  description: Compile with mmap support.

flag hpc
  default:     False

flag deps-only
  default:     False
  description: A cunning trick to have cabal install build dependencies

flag test
  default:     False
  description: Build test harness

-- We need optimizations by default, regardless of what Hackage says
flag optimize
  default:     True
  description: Build with optimizations (-O2)

-- ----------------------------------------------------------------------
-- darcs library
-- ----------------------------------------------------------------------

Library
  if !flag(library)
    buildable: False
  else
    buildable: True

    hs-source-dirs:   src
    include-dirs:     src

    cpp-options:      -DGADT_WITNESSES=1

    exposed-modules:  CommandLine
                      Crypt.SHA256
                      Darcs.ArgumentDefaults
                      Darcs.Arguments
                      Darcs.Bug
                      Darcs.ColorPrinter
                      Darcs.Commands
                      Darcs.Commands.Add
                      Darcs.Commands.AmendRecord
                      Darcs.Commands.Annotate
                      Darcs.Commands.Apply
                      Darcs.CommandsAux
                      Darcs.Commands.Changes
                      Darcs.Commands.Check
                      Darcs.Commands.Convert
                      Darcs.Commands.Diff
                      Darcs.Commands.Dist
                      Darcs.Commands.Get
                      Darcs.Commands.GZCRCs
                      Darcs.Commands.Help
                      Darcs.Commands.Init
                      Darcs.Commands.MarkConflicts
                      Darcs.Commands.Move
                      Darcs.Commands.Optimize
                      Darcs.Commands.Pull
                      Darcs.Commands.Push
                      Darcs.Commands.Put
                      Darcs.Commands.Record
                      Darcs.Commands.Remove
                      Darcs.Commands.Repair
                      Darcs.Commands.Replace
                      Darcs.Commands.Revert
                      Darcs.Commands.Rollback
                      Darcs.Commands.Send
                      Darcs.Commands.SetPref
                      Darcs.Commands.Show
                      Darcs.Commands.ShowAuthors
                      Darcs.Commands.ShowBug
                      Darcs.Commands.ShowContents
                      Darcs.Commands.ShowFiles
                      Darcs.Commands.ShowIndex
                      Darcs.Commands.ShowRepo
                      Darcs.Commands.ShowTags
                      Darcs.Commands.Tag
                      Darcs.Commands.TrackDown
                      Darcs.Commands.TransferMode
                      Darcs.Commands.Unrecord
                      Darcs.Commands.Unrevert
                      Darcs.Commands.WhatsNew
                      Darcs.Compat
                      Darcs.Diff
                      Darcs.Email
                      Darcs.External
                      Darcs.FilePathMonad
                      Darcs.Flags
                      Darcs.Global
                      Darcs.IO
                      Darcs.Lock
                      Darcs.Match
                      Darcs.Patch
                      Darcs.Patch.Apply
                      Darcs.Patch.Bracketed
                      Darcs.Patch.Bracketed.Instances
                      Darcs.Patch.Bundle
                      Darcs.Patch.Choices
                      Darcs.Patch.Commute
                      Darcs.Patch.Conflict
                      Darcs.Patch.ConflictMarking
                      Darcs.Patch.Depends
                      Darcs.Patch.Dummy
                      Darcs.Patch.Effect
                      Darcs.Patch.FileName
                      Darcs.Patch.FileHunk
                      Darcs.Patch.Format
                      Darcs.Patch.Info
                      Darcs.Patch.Inspect
                      Darcs.Patch.Invert
                      Darcs.Patch.MarkupData
                      Darcs.Patch.Markup
                      Darcs.Patch.Match
                      Darcs.Patch.MatchData
                      Darcs.Patch.Merge
                      Darcs.Patch.Named
                      Darcs.Patch.OldDate
                      Darcs.Patch.PatchInfoAnd
                      Darcs.Patch.Patchy
                      Darcs.Patch.Patchy.Instances
                      Darcs.Patch.Permutations
                      Darcs.Patch.Population
                      Darcs.Patch.PopulationData
                      Darcs.Patch.Prim
                      Darcs.Patch.Prim.Class
                      Darcs.Patch.Prim.V1
                      Darcs.Patch.Prim.V1.Apply
                      Darcs.Patch.Prim.V1.Coalesce
                      Darcs.Patch.Prim.V1.Commute
                      Darcs.Patch.Prim.V1.Core
                      Darcs.Patch.Prim.V1.Details
                      Darcs.Patch.Prim.V1.Read
                      Darcs.Patch.Prim.V1.Show
                      Darcs.Patch.Read
                      Darcs.Patch.ReadMonads
                      Darcs.Patch.RegChars
                      Darcs.Patch.Repair
                      Darcs.Patch.RepoPatch
                      Darcs.Patch.Set
                      Darcs.Patch.Show
                      Darcs.Patch.Split
                      Darcs.Patch.Summary
                      Darcs.Patch.SummaryData
                      Darcs.Patch.TokenReplace
                      Darcs.Patch.TouchesFiles
                      Darcs.Patch.Viewing
                      Darcs.Patch.V1
                      Darcs.Patch.V1.Apply
                      Darcs.Patch.V1.Commute
                      Darcs.Patch.V1.Core
                      Darcs.Patch.V1.Read
                      Darcs.Patch.V1.Show
                      Darcs.Patch.V1.Viewing
                      Darcs.Patch.V2
                      Darcs.Patch.V2.Non
                      Darcs.Patch.V2.Real
                      Darcs.PrintPatch
                      Darcs.ProgressPatches
                      Darcs.RemoteApply
                      Darcs.RepoPath
                      Darcs.Repository
                      Darcs.Repository.ApplyPatches
                      Darcs.Repository.Cache
                      Darcs.Repository.DarcsRepo
                      Darcs.Repository.Format
                      Darcs.Repository.HashedIO
                      Darcs.Repository.HashedRepo
                      Darcs.Repository.Internal
                      Darcs.Repository.LowLevel
                      Darcs.Repository.Merge
                      Darcs.Repository.InternalTypes
                      Darcs.Repository.Motd
                      Darcs.Repository.Prefs
                      Darcs.Repository.Pristine
                      Darcs.Repository.Repair
                      Darcs.Repository.State
                      Darcs.Resolution
                      Darcs.RunCommand
                      Darcs.SelectChanges
                      Darcs.SignalHandler
                      Darcs.Test
                      Darcs.TheCommands
                      Darcs.URL
                      Darcs.Utils
                      Darcs.Witnesses.Eq
                      Darcs.Witnesses.Ordered
                      Darcs.Witnesses.Sealed
                      Darcs.Witnesses.Show
                      Darcs.Witnesses.Unsafe
                      Darcs.Witnesses.WZipper
                      DateMatcher
                      English
                      Exec
                      ByteStringUtils
                      HTTP
                      IsoDate
                      Lcs
                      Printer
                      Progress
                      Ratified
                      SHA1
                      Ssh
                      URL
                      Workaround

    other-modules:    Version

    c-sources:        src/atomic_create.c
                      src/fpstring.c
                      src/maybe_relink.c
                      src/umask.c
                      src/Crypt/sha2.c
    cc-options:       -D_REENTRANT

    if os(windows)
      hs-source-dirs: src/win32
      include-dirs:   src/win32
      other-modules:  CtrlC
                      System.Posix
                      System.Posix.Files
                      System.Posix.IO
      cpp-options:    -DWIN32
      c-sources:      src/win32/send_email.c
      build-depends:  unix-compat >= 0.1.2,
                      regex-posix >= 0.94.4 && < 0.95

    if os(solaris)
      cc-options:     -DHAVE_SIGINFO_H

    build-depends:   base          >= 4 && < 5,
                     extensible-exceptions >= 0.1 && < 0.2,
                     regex-compat >= 0.71 && < 0.94,
                     mtl          >= 1.0 && < 1.2,
                     parsec       >= 2.0 && < 3.1,
                     html         == 1.0.*,
                     filepath     == 1.1.*,
                     haskeline    >= 0.6.2.2 && < 0.7,
                     hashed-storage >= 0.5.2 && < 0.6,
                     tar          == 0.3.*

    if !os(windows)
      build-depends: unix >= 1.0 && < 2.5

    build-depends: base >= 4 && < 5,
                   bytestring >= 0.9.0 && < 0.10,
                   text == 0.11.*,
                   old-time   == 1.0.*,
                   directory  == 1.0.*,
                   process    == 1.0.*,
                   containers >= 0.1 && < 0.4,
                   array      >= 0.1 && < 0.4,
                   random     == 1.0.*


    if flag(optimize)
      ghc-options:      -O2
    else
      ghc-options:      -O0

    -- Note: "if true" works around a cabal bug with order of flag composition
    if true
      ghc-options:      -Wall -funbox-strict-fields -fwarn-tabs

    ghc-prof-options: -prof -auto-all

    if flag(hpc)
      ghc-prof-options: -fhpc

    if flag(curl)
      extra-libraries:   curl
      includes:          curl/curl.h
      cpp-options:       -DHAVE_CURL
      c-sources:         src/hscurl.c
      cc-options:        -DHAVE_CURL

    if flag(http)
        build-depends:    network == 2.2.*,
                          HTTP    >= 3000.0 && < 4000.1
        cpp-options:      -DHAVE_HTTP
        x-have-http:

    if (!flag(curl) && !flag(http)) || flag(deps-only)
        buildable: False

    if flag(mmap) && !os(windows)
      build-depends:    mmap >= 0.5 && < 0.6
      cpp-options:      -DHAVE_MMAP

    build-depends:    zlib >= 0.5.1.0 && < 0.6.0.0

    -- The terminfo package cannot be built on Windows.
    if flag(terminfo) && !os(windows)
      build-depends:    terminfo == 0.3.*
      cpp-options:      -DHAVE_TERMINFO

    if flag(color)
      x-use-color:

    extensions:
      CPP
      BangPatterns
      PatternGuards
      GADTs
      TypeOperators
      FlexibleContexts
      FlexibleInstances
      ScopedTypeVariables
      KindSignatures
      RankNTypes
      TypeFamilies

-- ----------------------------------------------------------------------
-- darcs itself
-- ----------------------------------------------------------------------

Executable          darcs
  main-is:          darcs.hs
  hs-source-dirs:   src
  include-dirs:     src
  c-sources:        src/atomic_create.c
                    src/fpstring.c
                    src/maybe_relink.c
                    src/umask.c
                    src/Crypt/sha2.c


  if flag(optimize)
    ghc-options:      -O2
  else
    ghc-options:      -O0

  -- Note: "if true" works around a cabal bug with order of flag composition
  if true
    ghc-options:      -Wall -funbox-strict-fields -fwarn-tabs

  ghc-prof-options: -prof -auto-all
  if flag(threaded)
    ghc-options:    -threaded

  if flag(static)
    ghc-options: -static -optl-static -optl-pthread

  if flag(hpc)
    ghc-prof-options: -fhpc

  cc-options:       -D_REENTRANT

  if os(windows)
    hs-source-dirs: src/win32
    include-dirs:   src/win32
    other-modules:  CtrlC
                    System.Posix
                    System.Posix.Files
                    System.Posix.IO
                    Preproc
    cpp-options:    -DWIN32
    c-sources:      src/win32/send_email.c
    build-depends:  unix-compat >= 0.1.2,
                    regex-posix >= 0.94.4 && < 0.95

  if os(solaris)
    cc-options:     -DHAVE_SIGINFO_H

  build-depends:   base          >= 4 && < 5,
                   extensible-exceptions >= 0.1 && < 0.2,
                   regex-compat >= 0.71 && < 0.94,
                   mtl          >= 1.0 && < 1.2,
                   parsec       >= 2.0 && < 3.1,
                   html         == 1.0.*,
                   filepath     == 1.1.*,
                   haskeline    >= 0.6.2.2 && < 0.7,
                   hashed-storage >= 0.5.2 && < 0.6,
                   tar          == 0.3.*

  if !os(windows)
    build-depends: unix >= 1.0 && < 2.5

  build-depends: base >= 4 && < 5,
                 bytestring >= 0.9.0 && < 0.10,
                 text == 0.11.*,
                   old-time   == 1.0.*,
                   directory  == 1.0.*,
                   process    == 1.0.*,
                   containers >= 0.1 && < 0.4,
                   array      >= 0.1 && < 0.4,
                   random     == 1.0.*

  if flag(curl)
    extra-libraries:   curl
    includes:          curl/curl.h
    cpp-options:       -DHAVE_CURL
    c-sources:         src/hscurl.c
    cc-options:        -DHAVE_CURL

  if flag(http)
      build-depends:    network == 2.2.*,
                        HTTP    >= 3000.0 && < 4000.1
      cpp-options:      -DHAVE_HTTP
      x-have-http:

  if (!flag(curl) && !flag(http)) || flag(deps-only)
      buildable: False

  if flag(mmap) && !os(windows)
    build-depends:    mmap >= 0.5 && < 0.6
    cpp-options:      -DHAVE_MMAP

  build-depends:    zlib >= 0.5.1.0 && < 0.6.0.0

  -- The terminfo package cannot be built on Windows.
  if flag(terminfo) && !os(windows)
    build-depends:    terminfo == 0.3.*
    cpp-options:      -DHAVE_TERMINFO

  if flag(color)
    x-use-color:

  extensions:
    CPP
    BangPatterns
    PatternGuards
    GADTs
    TypeOperators
    FlexibleContexts
    FlexibleInstances
    ScopedTypeVariables
    KindSignatures
    RankNTypes
    TypeFamilies

-- ----------------------------------------------------------------------
-- unit test driver
-- ----------------------------------------------------------------------

Executable          darcs-test
  buildable:	    True
  hs-source-dirs:   src

  if !flag(test)
    main-is:	      test_stub.hs
    build-depends:    base < 5
  else
    main-is:          test.hs
    build-depends:   base          < 5,
                     extensible-exceptions >= 0.1 && < 0.2,
                     regex-compat >= 0.71 && < 0.94,
                     mtl          >= 1.0 && < 1.2,
                     parsec       >= 2.0 && < 3.1,
                     html         == 1.0.*,
                     filepath     == 1.1.*,
                     QuickCheck   >= 2.1.0.0,
                     HUnit        >= 1.0,
                     cmdlib       >= 0.2.1 && < 0.3,
                     shellish     >= 0.1.3 && < 0.2,
                     test-framework             >= 0.2.2,
                     test-framework-hunit       >= 0.2.2,
                     test-framework-quickcheck2 >= 0.2.2

    include-dirs:     src
    c-sources:        src/atomic_create.c
                      src/fpstring.c
                      src/maybe_relink.c
                      src/umask.c
                      src/Crypt/sha2.c
    -- list all unit test modules not exported by libdarcs; otherwise Cabal won't
    -- include them in the tarball
    other-modules:    Darcs.Test.Email
                      Darcs.Test.Patch.Check
                      Darcs.Test.Patch.Examples
                      Darcs.Test.Patch.Examples2
                      Darcs.Test.Patch.Info
                      Darcs.Test.Patch.Properties
                      Darcs.Test.Patch.Properties2
                      Darcs.Test.Patch.QuickCheck
                      Darcs.Test.Patch.Test
                      Darcs.Test.Patch.Unit
                      Darcs.Test.Patch.Unit2
                      Darcs.Test.Patch.Utils
                      Darcs.Test.Patch
                      Darcs.Test.Misc

    if flag(optimize)
      ghc-options:      -O2
    else
      ghc-options:      -O0

    -- Note: "if true" works around a cabal bug with order of flag composition
    if true
      ghc-options:      -Wall -funbox-strict-fields -fwarn-tabs

    ghc-prof-options: -prof -auto-all
    if flag(threaded)
      ghc-options:    -threaded

    cc-options:       -D_REENTRANT

    cpp-options:      -DGADT_WITNESSES=1

    if os(windows)
      hs-source-dirs: src/win32
      include-dirs:   src/win32
      other-modules:  CtrlC
                      System.Posix
                      System.Posix.Files
                      System.Posix.IO
      cpp-options:    -DWIN32
      c-sources:      src/win32/send_email.c
      build-depends:  unix-compat >= 0.1.2,
                      regex-posix >= 0.94.4 && < 0.95

    if os(solaris)
      cc-options:     -DHAVE_SIGINFO_H

    if !os(windows)
      build-depends: unix >= 1.0 && < 2.5

    build-depends: base >= 4 && < 5,
                   bytestring >= 0.9.0 && < 0.10,
                   haskeline    >= 0.6.2.2 && < 0.7,
                   text == 0.11.*,
                   old-time   == 1.0.*,
                   directory  == 1.0.*,
                   process    == 1.0.*,
                   containers >= 0.1 && < 0.4,
                   array      >= 0.1 && < 0.4,
                   hashed-storage >= 0.5.2 && < 0.6,
                   random     == 1.0.*

    if flag(mmap) && !os(windows)
      build-depends:    mmap >= 0.5 && < 0.6
      cpp-options:      -DHAVE_MMAP

    build-depends:    zlib >= 0.5.1.0 && < 0.6.0.0

    -- The terminfo package cannot be built on Windows.
    if flag(terminfo) && !os(windows)
      build-depends:    terminfo == 0.3.*
      cpp-options:      -DHAVE_TERMINFO

    if flag(http)
        build-depends:    network == 2.2.*,
                          HTTP    >= 3000.0 && < 4000.1

    if flag(color)
      x-use-color:

    extensions:
      CPP
      BangPatterns
      PatternGuards
      GADTs
      TypeOperators
      FlexibleContexts
      FlexibleInstances
      ScopedTypeVariables
      KindSignatures
      RankNTypes
      TypeFamilies

